# coffeeCup

./: CMakeLists.txt  build_tree.cpp  get_training_samples.cpp  kdtree.idx  kinect2grabber.cpp  kinect2grabber.h  nearest_neighbors.cpp  prepare_data.cpp  readme.md  realtime_recognize_demo.cpp  scene_test.cpp  test.sh  train.sh  training_data.h5  training_data.list
test_data/: cluster_0.pcd  cluster_0_vfh.pcd  cup_test_sample_1.pcd  cup_test_sample_2.pcd  cup_test_sample_4.pcd  cup_test_sample_5.pcd  cup_test_sample_6.pcd  cup_test_sample_7.pcd  cup_test_sample_8.pcd
training_data/coffee_cup/: cup_sample_0.pcd  cup_sample_1.pcd  cup_sample_2.pcd  cup_sample_3.pcd  cup_sample_4.pcd  cup_sample_5.pcd  cup_sample_6.pcd  cup_sample_7.pcd  cup_sample_8.pcd  other_sample_1.pcd
training_data/features/bowl/: bowl_sample_0_vfh.pcd  bowl_sample_1_vfh.pcd  bowl_sample_2_vfh.pcd  bowl_sample_3_vfh.pcd
training_data/features/cup/: cup_sample_0_vfh.pcd  cup_sample_1_vfh.pcd  cup_sample_2_vfh.pcd  cup_sample_3_vfh.pcd  cup_sample_4_vfh.pcd
training_data/features/stair/: stair_sample_0_vfh.pcd  stair_sample_1_vfh.pcd  stair_sample_2_vfh.pcd  stair_sample_3_vfh.pcd
training_data/models/bowl/: bowl_sample_0.pcd  bowl_sample_1.pcd  bowl_sample_2.pcd  bowl_sample_3.pcd
training_data/models/cup/: cup_sample_0.pcd  cup_sample_1.pcd  cup_sample_2.pcd  cup_sample_3.pcd  cup_sample_4.pcd
training_data/models/stair/: stair_sample_0.pcd  stair_sample_1.pcd  stair_sample_2.pcd  stair_sample_3.pcd
